tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__erlang_function_with_comment.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
hello(Name) ->
    % Greet the user
    io:format("Hello, ~s!~n", [Name]).

# text_to_type
hello(Name) ->
io:format("Hello, ~s!~n", [Name]).

# text_to_display
hello(Name) ->↵
    % Greet the user
    io:format("Hello, ~s!~n", [Name]).↵
