tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__erlang_list_comprehension_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
transform(List) ->
    % Double all even numbers
    [X * 2 || X <- List, X rem 2 =:= 0].

# text_to_type
transform(List) ->
[X * 2 || X <- List, X rem 2 =:= 0].

# text_to_display
transform(List) ->↵
    % Double all even numbers
    [X * 2 || X <- List, X rem 2 =:= 0].↵
