tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__erlang_module_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
-module(greeter).
-export([hello/1]).

% Public greeting function
hello(Name) ->
    io:format("Hello, ~s!~n", [Name]).

# text_to_type
-module(greeter).
-export([hello/1]).
hello(Name) ->
io:format("Hello, ~s!~n", [Name]).

# text_to_display
-module(greeter).↵
-export([hello/1]).↵

% Public greeting function
hello(Name) ->↵
    io:format("Hello, ~s!~n", [Name]).↵
