tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__erlang_pattern_matching_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
factorial(0) -> 1;
% Recursive case
factorial(N) when N > 0 ->
    N * factorial(N - 1).

# text_to_type
factorial(0) -> 1;
factorial(N) when N > 0 ->
N * factorial(N - 1).

# text_to_display
factorial(0) -> 1;↵
% Recursive case
factorial(N) when N > 0 ->↵
    N * factorial(N - 1).↵
