tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__go_function_with_comment.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
func add(a, b int) int {
    return a + b // Return sum
}

# text_to_type
func add(a, b int) int {
return a + b // Return sum
}

# text_to_display
func add(a, b int) int {↵
    return a + b // Return sum↵
}↵
