tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__go_interface_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
type Shape interface {
    // Get the area
    Area() float64
    // Get the perimeter
    Perimeter() float64
}

# text_to_type
type Shape interface {
// Get the area
Area() float64
// Get the perimeter
Perimeter() float64
}

# text_to_display
type Shape interface {↵
    // Get the area↵
    Area() float64↵
    // Get the perimeter↵
    Perimeter() float64↵
}↵
