tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__go_struct_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
type Person struct {
    Name string // Person's name
    Age  int    // Person's age
}

func (p *Person) Greet() {
    fmt.Printf("Hello, I'm %s", p.Name) // Print greeting
}

# text_to_type
type Person struct {
Name string // Person's name
Age  int    // Person's age
}
func (p *Person) Greet() {
fmt.Printf("Hello, I'm %s", p.Name) // Print greeting
}

# text_to_display
type Person struct {↵
    Name string // Person's name↵
    Age  int    // Person's age↵
}↵

func (p *Person) Greet() {↵
    fmt.Printf("Hello, I'm %s", p.Name) // Print greeting↵
}↵
