tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__haskell_data_type_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
-- Represents a person with a name and age
data Person = Person
  { name :: String  -- The person's name
  , age  :: Int     -- The person's age
  } deriving (Show)

# text_to_type
-- Represents a person with a name and age
data Person = Person
{ name :: String  -- The person's name
, age  :: Int     -- The person's age
} deriving (Show)

# text_to_display
-- Represents a person with a name and age↵
data Person = Person↵
  { name :: String  -- The person's name↵
  , age  :: Int     -- The person's age↵
  } deriving (Show)↵
